<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SigninV1</string>
    <string name="action_settings">Settings</string>
    <string name="project_name">SIGN IN</string>
    <string name="main_signin">Sign In</string>
    <string name="main_signup">Sign Up</string>
    
    <string name="main_signin_firstname_hint">First Name</string>
    <string name="main_signin_lastname_hint">Last Name</string>
    
    <string name="fbAuth">Face Book Authentication</string>
    <string name="twitterAuth">Twitter Authentication</string>
    <string name="googleAuth">Google Authentication</string>

</resources>